--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -2,19 +2,19 @@
     display: none;
 }
 
-div#wall #tag-2 {
+#wall div#tag-2 {
     display:none;
 }
 
-div#wall #tag-3.slicked.wicked {
+#wall div#tag-3.slick.wicked {
     display:none;
 }
 
-div#wall #tag-4 {
+#wall div.parent #tag-4 {
     display:none;
 }
 
-div#wall #tag-5.slick {
+div#wall div.parent #tag-5.slick{
     display: none;
 }
 
